--- a/src/main/webapp/books_alter.html
+++ b/src/main/webapp/books_alter.html
@@ -30,15 +30,6 @@
 								<img src="images/logo.png" alt="">
 							</a>
 						</div>
-                        
-						<div class="col-lg-4 col-md-6 col-sm-8 t_xs_align_c t_align_r m_xs_bottom_0">
-							<div class="row clearfix">
-								<ul class="d_inline_b horizontal_list clearfix f_size_medium users_nav">
-									<li><a href="#" class="default_t_color">My Account</a></li>
-									<li><a href="admin_login.html" class="default_t_color">Check out</a></li>
-								</ul>
-							</div>
-						</div>
 					</div>
 				</section>
 				
@@ -54,11 +45,11 @@
 						<!--main menu-->
 						<nav role="navigation" class="f_left f_xs_none d_xs_none">	
 							<ul class="horizontal_list main_menu clearfix">
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.html" class="tr_delay_hover color_light tt_uppercase"><b>Basic Service</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="circulation.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="recommendation.html" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
-								<li class="relative current f_xs_none m_xs_bottom_5"><a href="changepwd.html" class="tr_delay_hover color_light tt_uppercase"><b>Books Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="changepwd.html" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
+								<li class="relative current f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_newsManage.html" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
 							</ul>
 						</nav>
 						<button class="f_right search_button tr_all_hover f_xs_none d_xs_none">
