--- a/src/main/webapp/return.html
+++ b/src/main/webapp/return.html
@@ -130,7 +130,7 @@
                                                 <td width="40" height="50" align="right" valign="middle">
                                                 </td>
                                                 <td width="300" height="50" align="left" valign="middle">
-                                                	<input type="text" id="IBSN" name="cf_name" class="full_width r_corners">
+                                                	<input type="text" id="ISBN" name="cf_name" class="full_width r_corners">
                                                 </td>
                                             </tr>
                                             <tr class="m_bottom_25">
@@ -259,5 +259,6 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/jquery.custom-scrollbar.js"></script>
 		<script src="js/scripts.js"></script>
+		<script src="js/myscripts.js"></script>
 	</body>
 </html>
