管理员登录，书籍管理界面，其他页面主要是修改logo的超链接

--- a/src/main/webapp/books_add.html
+++ b/src/main/webapp/books_add.html
@@ -26,7 +26,7 @@
 				<section class="h_bot_part container">
 					<div class="clearfix row">
 						<div class="col-lg-8 col-md-6 col-sm-4 t_xs_align_c">
-							<a href="index.html" class="logo m_xs_bottom_15 d_xs_inline_b">
+							<a href="#" class="logo m_xs_bottom_15 d_xs_inline_b">
 								<img src="images/logo.png" alt="">
 							</a>
 						</div>
@@ -99,7 +99,7 @@
 										</li>
 										<li>
 											<a href="books_update.html" class="f_size_large color_dark d_block relative">
-												<b>Update Books</b>
+												<b>Delete Books</b>
 											</a>
 										</li>
 										<!--<li>
