--- a/src/main/webapp/books_update.html
+++ b/src/main/webapp/books_update.html
@@ -2,7 +2,7 @@
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 	<head>
-		<title>Flatastic - Category No Products</title>
+		<title>Update Books</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!--meta info-->
@@ -26,7 +26,7 @@
 				<section class="h_bot_part container">
 					<div class="clearfix row">
 						<div class="col-lg-8 col-md-6 col-sm-4 t_xs_align_c">
-							<a href="index.html" class="logo m_xs_bottom_15 d_xs_inline_b">
+							<a href="#" class="logo m_xs_bottom_15 d_xs_inline_b">
 								<img src="images/logo.png" alt="">
 							</a>
 						</div>
@@ -43,18 +43,15 @@
 							<span class="centered_db r_corners"></span>
 						</button>
 						<!--main menu-->
-						<nav role="navigation" class="f_left f_xs_none d_xs_none">	
+						<nav role="navigation" class="f_left f_xs_none d_xs_none">
 							<ul class="horizontal_list main_menu clearfix">
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
-								<li class="relative current f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
+								<li class="relative current f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow or Return</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
 								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
 								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_newsManage.html" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_recommendation.html" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
 							</ul>
 						</nav>
-						<button class="f_right search_button tr_all_hover f_xs_none d_xs_none">
-							<i class="fa fa-search"></i>
-						</button>
 					</div>
 					<!--search form-->
 					<div class="searchform_wrap tf_xs_none tr_all_hover">
@@ -94,12 +91,12 @@
 									<ul class="categories_list">
 										<li class="active">
 											<a href="books_add.html" class="f_size_large color_dark d_block relative">
-												<b>Add Books</b>
+												<b>Add</b>
 											</a>
 										</li>
 										<li>
 											<a href="books_update.html" class="f_size_large scheme_color d_block relative">
-												<b>Delete Books</b>
+												<b>Update</b>
 											</a>
 										</li>
 									</ul>
@@ -113,7 +110,7 @@
 							<div class="clearfix m_bottom_30">
 								<figure>
 									<div class="row clearfix r_corners photoframe  shadow m_bottom_45">
-										<h2 style="margin:20px 30px" class="tt_uppercase color_dark m_bottom_30">Delete Books</h2>
+										<h2 style="margin:20px 30px" class="tt_uppercase color_dark m_bottom_30">Update Books</h2>
 										<hr style="margin:0px 30px" >
                                         <div style="margin:0px 20px 30px 0px;">
                                 	    	<br>
@@ -162,7 +159,9 @@
 		                                                                Publication Year: 2006
 		                                                            </li>
 		                                                        </ul>
-		                                                    </p>
+														</div>
+														<div class="f_right f_sm_none t_align_r t_sm_align_l">
+															<button onclick="window.open('books_alter.html')" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
 														</div>
 														<div class="f_right f_sm_none t_align_r t_sm_align_l">
 		                                                    <button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
@@ -200,7 +199,10 @@
 			                                                    </p>
 															</div>
 															<div class="f_right f_sm_none t_align_r t_sm_align_l">
-			                                                    <button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
+																<button onclick="window.open('books_alter.html')" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
+															</div>
+															<div class="f_right f_sm_none t_align_r t_sm_align_l">
+																<button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 															</div>
 														</div>
 									        		</div>
