书籍管理页面修改

--- a/src/main/webapp/books_add.html
+++ b/src/main/webapp/books_add.html
@@ -147,7 +147,7 @@
 													<input name = "press" maxlength="20" class="full_width r_corners">
 												</div>
                                                 <div class="f_left half_column">
-													<label for="pub_year" class="d_inline_b m_bottom_5">Publish Year</label>
+													<label for="pub_year" class="required d_inline_b m_bottom_5">Publish Year</label>
 													<input name = "pub_year" maxlength="4" size="4" class="full_width r_corners">
 												</div>
 											</li>
