--- a/src/main/webapp/books_update.html
+++ b/src/main/webapp/books_update.html
@@ -132,7 +132,7 @@
 													<div id="details" style="display:none;font-size:14px;width:400px;position:absolute;z-index:10000;background:#fff;border:1px solid #aaa" ></div>
 												</form>
 												<div style="margin:0 30px;padding-top:20px"class="products_container">
-													<div style="width:700px;margin-top:30px;padding-left:25px"class="product_item full_width list_type hit m_left_0 m_right_0" >
+													<div style="width:710px;margin-top:30px;padding-left:25px"class="product_item full_width list_type hit m_left_0 m_right_0" >
 														<!--product preview-->
 														<a href="#" class="d_block f_left relative pp_wrap m_right_30 m_xs_right_25">
 															<img style="height:130px;width:130px;" src="img/product_img_3.jpg" class="tr_all_hover" alt="">
@@ -160,15 +160,14 @@
 		                                                            </li>
 		                                                        </ul>
 														</div>
-														<div class="f_right f_sm_none t_align_r t_sm_align_l">
+														<div style="margin:100px auto 0px" class="f_right f_sm_none t_align_r t_sm_align_l">
 															<button onclick="window.open('books_alter.html')" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
+															<button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 														</div>
-														<div class="f_right f_sm_none t_align_r t_sm_align_l">
-		                                                    <button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
-														</div>
+														
 													</div>
 													
-													<div style="width:700px;margin-top:30px;padding-left:25px" class="product_item full_width list_type hit m_left_0 m_right_0" >
+													<div style="width:710px;margin-top:30px;padding-left:25px" class="product_item full_width list_type hit m_left_0 m_right_0" >
 														<!--product preview-->
 														<a href="#" class="d_block f_left relative pp_wrap m_right_30 m_xs_right_25">
 															<img style="height:130px;width:130px;" src="img/product_img_3.jpg" class="tr_all_hover" alt="">
@@ -198,10 +197,8 @@
 			                                                        </ul>
 			                                                    </p>
 															</div>
-															<div class="f_right f_sm_none t_align_r t_sm_align_l">
+															<div style="margin:100px auto 0px" class="f_right f_sm_none t_align_r t_sm_align_l">
 																<button onclick="window.open('books_alter.html')" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
-															</div>
-															<div class="f_right f_sm_none t_align_r t_sm_align_l">
 																<button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 															</div>
 														</div>
