--- a/src/main/webapp/admin_news_update.html
+++ b/src/main/webapp/admin_news_update.html
@@ -120,6 +120,10 @@
 												<label for="name" class="required  d_inline_b m_bottom_5">Title</label><br>
 												<input type="text" id="name" name="" class="r_corners full_width">
 											</li>
+                                            <li class="m_bottom_15">
+                                                <label for="shortcut" class="required  d_inline_b m_bottom_5">Summary</label><br>
+                                                <input type="text" id="shortcut" name="summary" class="r_corners full_width">
+                                            </li>
 											<li class="m_bottom_15">
 												<label for="comments" class="required  d_inline_b m_bottom_5">Content</label><br>
 												<textarea id="comments" name="" class="r_corners full_width"></textarea>
