在线阅读和处理荐购(70%)和一些页面

--- a/src/main/webapp/books_add.html
+++ b/src/main/webapp/books_add.html
@@ -96,7 +96,7 @@
 										</li>
 										<li>
 											<a href="books_update.html" class="f_size_large color_dark d_block relative">
-												<b>Delete Books</b>
+												<b>Update Books</b>
 											</a>
 										</li>
 										<!--<li>
