--- a/src/main/webapp/admin_recom.html
+++ b/src/main/webapp/admin_recom.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html" pageEncoding="UTF-8"%>
 <!doctype html>
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
@@ -47,11 +46,11 @@
 						<!--main menu-->
 						<nav role="navigation" class="f_left f_xs_none d_xs_none">
 							<ul class="horizontal_list main_menu clearfix">
-								<li class="relative current f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_newsManage.html" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_recommendation.html" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav1" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav2" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav3" href="#" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav4" href="#" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
+								<li class="relative current f_xs_none m_xs_bottom_5"><a id="nav5" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
 							</ul>
 						</nav>
 						<button class="f_right search_button tr_all_hover f_xs_none d_xs_none">
@@ -95,13 +94,13 @@
 									<!--Categories list-->
 									<ul class="categories_list">
 										<li class="active">
-											<a href="admin_recommendation.html" class="f_size_large scheme_color d_block relative">
-												<b>Pending</b>
+											<a href="admin_recom.html" class="f_size_large scheme_color d_block relative">
+												<b>Unhandle</b>
 											</a>
 										</li>
 										<li>
 											<a href="admin_recom_history.html" class="f_size_large color_dark d_block relative">
-												<b>Processed</b>
+												<b>Handled</b>
 											</a>
 										</li>
 									</ul>
@@ -208,16 +207,16 @@
 									<div class="col-lg-7 col-md-7 col-sm-7 col-xs-5">
 										<p class="d_inline_middle f_size_medium"></p>
 									</div>
-									<div class="col-lg-5 col-md-5 col-sm-4 t_align_r t_xs_align_l">
+									<div id="pagination" class="col-lg-5 col-md-5 col-sm-4 t_align_r t_xs_align_l">
 										<!--pagination-->
-										<a role="button" href="#" class="button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><i class="fa fa-angle-left"></i></a>
+										<a role="button" onclick="prePage()" class="button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><i class="fa fa-angle-left"></i></a>
 										<ul class="horizontal_list clearfix d_inline_middle f_size_medium m_left_10">
 											<li class="m_right_10"><a class="scheme_color" href="#" id="cur_page">1</a></li>
 											<li class="m_right_10 color_dark" id="page_cnt">/ 3 </li>
 										</ul>
-										<a role="button" href="#" class="button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><i class="fa fa-angle-right"></i></a>
-										<a role="button" href="#" class="f_right button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><span style="margin:4px">go</span></a>
-										<input style="width:28px;margin:0 6px 0 15px;height:23px" type="text" name="" class="r_corners f_right type_2">
+										<a role="button" onclick="nextPage()" class="button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><i class="fa fa-angle-right"></i></a>
+										<a role="button" onclick="jumpToInput()" class="f_right button_type_10 color_dark d_inline_middle bg_cs_hover bg_light_color_1 t_align_c tr_delay_hover r_corners box_s_none"><span style="margin:4px">go</span></a>
+										<input id="page" style="width:50px;margin:0 6px 0 15px;height:23px" type="text" class="r_corners f_right type_2" >
 									</div>
 								</div>
 							</div>
@@ -300,28 +299,11 @@
 
 
 		<script type="text/javascript">
-			var $btn = $('#recContainer button .fa-trash-o');
-			//confirm(this.className)
-			$btn.click(function(event) {
-				$this=$(this); 
-		        if (confirm("Are you sure to reject this recommendation?")) {   
-		          	var $rec = $this.parents('#recContainer div');
-		          	$rec.remove();
-		        }else{
-		        	window.event.returnValue = false;
-		        }
-			});
-
 			/* Ajax */
 			$(document).ready(function () {
-				var page = getQueryString("page");
-				if (page == null){
-					getData(1, "unhandle");
-					$("#cur_page").html(1);
-				} else{
-					getData(page, "unhandle");
-					$("#cur_page").html(page);
-				}
+				var page = getCurPage();
+				getData(page, "unhandle");
+				$("#cur_page").html(page);
 			});
 		</script>
 
@@ -332,6 +314,7 @@
 		</script>
 
 		<script src="js/jquery-ui.min.js"></script>
+		<script src="js/navigation.js"></script>
 		<script src="js/retina.js"></script>
 		<script src="js/recom.js"></script>
 		<script src="js/waypoints.min.js"></script>
