书籍更新js;修改一些页面

--- a/src/main/webapp/books_update.html
+++ b/src/main/webapp/books_update.html
@@ -45,8 +45,8 @@
 						<!--main menu-->
 						<nav role="navigation" class="f_left f_xs_none d_xs_none">
 							<ul class="horizontal_list main_menu clearfix">
-								<li class="relative current f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow or Return</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow or Return</b></a></li>
+								<li class="relative current f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
 								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
 								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_newsManage.html" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
 								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_recommendation.html" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
@@ -136,7 +136,6 @@
 														<!--product preview-->
 														<a href="#" class="d_block f_left relative pp_wrap m_right_30 m_xs_right_25">
 															<img style="height:130px;width:130px;" src="img/product_img_3.jpg" class="tr_all_hover" alt="">
-															<span role="button" data-popup="#quick_view_product" class="button_type_5 box_s_none color_light r_corners tr_all_hover d_xs_none">Quick View</span>
 														</a>
 														<!--description and price of product-->
 													
@@ -161,7 +160,7 @@
 		                                                        </ul>
 														</div>
 														<div style="margin:100px auto 0px" class="f_right f_sm_none t_align_r t_sm_align_l">
-															<button onclick="window.open('books_alter.html')" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
+															<button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Modify</button>
 															<button class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_bottom_15 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 														</div>
 														
@@ -297,5 +296,6 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/jquery.custom-scrollbar.js"></script>
 		<script src="js/scripts.js"></script>
+        <script src="js/book_update.js"></script>
 	</body>
 </html>
