--- a/src/main/webapp/admin_recom.html
+++ b/src/main/webapp/admin_recom.html
@@ -2,7 +2,7 @@
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 	<head>
-		<title>SLibrary - Recommendation Management</title>
+		<title>Recommendation Management</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!--meta info-->
@@ -201,8 +201,8 @@
 										</figcaption>
 									</figure>
 								</div>
-
 								<hr class="m_bottom_10 divider_type_3">
+
 								<div class="row clearfix m_xs_bottom_30">
 									<div class="col-lg-7 col-md-7 col-sm-7 col-xs-5">
 										<p class="d_inline_middle f_size_medium"></p>
@@ -262,38 +262,7 @@
                         </div>
                     </div>
                 </div>
-				
 			</footer>
-		</div>
-		
-		<!--login popup-->
-		<div class="popup_wrap d_none" id="login_popup">
-			<section class="popup r_corners shadow">
-				<button class="bg_tr color_dark tr_all_hover text_cs_hover close f_size_large"><i class="fa fa-times"></i></button>
-				<h3 class="m_bottom_20 color_dark">Log In</h3>
-				<form>
-					<ul>
-						<li class="m_bottom_15">
-							<label for="username" class="m_bottom_5 d_inline_b">Username</label><br>
-							<input type="text" name="" id="username" class="r_corners full_width">
-						</li>
-						<li class="m_bottom_25">
-							<label for="password" class="m_bottom_5 d_inline_b">Password</label><br>
-							<input type="password" name="" id="password" class="r_corners full_width">
-						</li>
-						<li class="m_bottom_15">
-							<input type="checkbox" class="d_none" id="checkbox_10"><label for="checkbox_10">Remember me</label>
-						</li>
-						<li class="clearfix m_bottom_30">
-							<button class="button_type_4 tr_all_hover r_corners f_left bg_scheme_color color_light f_mxs_none m_mxs_bottom_15">Log In</button>
-							<div class="f_right f_size_medium f_mxs_none">
-								<a href="#" class="color_dark">Forgot your password?</a><br>
-								<a href="#" class="color_dark">Forgot your username?</a>
-							</div>
-						</li>
-					</ul>
-				</form>
-			</section>
 		</div>
 		<button class="t_align_c r_corners tr_all_hover type_2 animate_ftl" id="go_to_top"><i class="fa fa-angle-up"></i></button>
 
@@ -308,11 +277,6 @@
 		</script>
 
 		<!--scripts include-->
-		
-		<script type="text/javascript">   
-			
-		</script>
-
 		<script src="js/jquery-ui.min.js"></script>
 		<script src="js/navigation.js"></script>
 		<script src="js/retina.js"></script>
