--- a/src/main/webapp/admin_news_add.html
+++ b/src/main/webapp/admin_news_add.html
@@ -2,7 +2,7 @@
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 	<head>
-		<title>SLibrary - News Management</title>
+		<title>Add News</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!--meta info-->
@@ -43,29 +43,15 @@
 							<span class="centered_db r_corners"></span>
 						</button>
 						<!--main menu-->
-						<nav role="navigation" class="f_left f_xs_none d_xs_none">	
+						<nav role="navigation" class="f_left f_xs_none d_xs_none">
 							<ul class="horizontal_list main_menu clearfix">
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="borrow.html" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="books_update.html" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="index.jsp" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
-								<li class="relative current f_xs_none m_xs_bottom_5"><a href="admin_newsManage.html" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
-								<li class="relative f_xs_none m_xs_bottom_5"><a href="admin_recommendation.html" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav1" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Borrow And Return</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav2" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Book Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav3" href="#" class="tr_delay_hover color_light tt_uppercase"><b>E-Resource</b></a></li>
+								<li class="relative current f_xs_none m_xs_bottom_5"><a id="nav4" href="#" class="tr_delay_hover color_light tt_uppercase"><b>News Management</b></a></li>
+								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav5" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
 							</ul>
 						</nav>
-						<button class="f_right search_button tr_all_hover f_xs_none d_xs_none">
-							<i class="fa fa-search"></i>
-						</button>
-					</div>
-					<!--search form-->
-					<div class="searchform_wrap tf_xs_none tr_all_hover">
-						<div class="container vc_child h_inherit relative">
-							<form role="search" class="d_inline_middle full_width">
-								<input type="text" name="search" placeholder="Type text and hit enter" class="f_size_large">
-							</form>
-							<button class="close_search_form tr_all_hover d_xs_none color_dark">
-								<i class="fa fa-times"></i>
-							</button>
-						</div>
 					</div>
 				</section>
 			</header>
@@ -93,7 +79,7 @@
 									<!--Categories list-->
 									<ul class="categories_list">
 										<li>
-											<a href="admin_newsManage.html" class="f_size_large color_dark d_block relative">
+											<a href="/News/query" class="f_size_large color_dark d_block relative">
 												<b>Update News</b>
 											</a>
 										</li>
@@ -181,39 +167,12 @@
 				
 			</footer>
 		</div>
-		
-		<!--login popup-->
-		<div class="popup_wrap d_none" id="login_popup">
-			<section class="popup r_corners shadow">
-				<button class="bg_tr color_dark tr_all_hover text_cs_hover close f_size_large"><i class="fa fa-times"></i></button>
-				<h3 class="m_bottom_20 color_dark">Log In</h3>
-				<form>
-					<ul>
-						<li class="m_bottom_15">
-							<label for="username" class="m_bottom_5 d_inline_b">Username</label><br>
-							<input type="text" name="" id="username" class="r_corners full_width">
-						</li>
-						<li class="m_bottom_25">
-							<label for="password" class="m_bottom_5 d_inline_b">Password</label><br>
-							<input type="password" name="" id="password" class="r_corners full_width">
-						</li>
-						<li class="m_bottom_15">
-							<input type="checkbox" class="d_none" id="checkbox_10"><label for="checkbox_10">Remember me</label>
-						</li>
-						<li class="clearfix m_bottom_30">
-							<button class="button_type_4 tr_all_hover r_corners f_left bg_scheme_color color_light f_mxs_none m_mxs_bottom_15">Log In</button>
-							<div class="f_right f_size_medium f_mxs_none">
-								<a href="#" class="color_dark">Forgot your password?</a><br>
-								<a href="#" class="color_dark">Forgot your username?</a>
-							</div>
-						</li>
-					</ul>
-				</form>
-			</section>
-		</div>
+
 		<button class="t_align_c r_corners tr_all_hover type_2 animate_ftl" id="go_to_top"><i class="fa fa-angle-up"></i></button>
+
 		<!--scripts include-->
 		<script src="js/jquery-2.1.0.min.js"></script>
+		<script src="js/navigation.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
 		<script src="js/retina.js"></script>
 		<script src="js/waypoints.min.js"></script>
