--- a/src/main/webapp/ebook_delete.html
+++ b/src/main/webapp/ebook_delete.html
@@ -52,20 +52,6 @@
 								<li class="relative f_xs_none m_xs_bottom_5"><a id="nav5" href="#" class="tr_delay_hover color_light tt_uppercase"><b>Recommendation</b></a></li>
 							</ul>
 						</nav>
-						<button class="f_right search_button tr_all_hover f_xs_none d_xs_none">
-							<i class="fa fa-search"></i>
-						</button>
-					</div>
-					<!--search form-->
-					<div class="searchform_wrap tf_xs_none tr_all_hover">
-						<div class="container vc_child h_inherit relative">
-							<form role="search" class="d_inline_middle full_width">
-								<input type="text" name="search" placeholder="Type text and hit enter" class="f_size_large">
-							</form>
-							<button class="close_search_form tr_all_hover d_xs_none color_dark">
-								<i class="fa fa-times"></i>
-							</button>
-						</div>
 					</div>
 				</section>
 			</header>
@@ -120,7 +106,7 @@
 											<div>
 												<form style="margin:30px 50px">
 													<!-- delete form -->											
-													<input id="isbn" placeholder="Please input the ISBN" autocomplete="off" class=" r_corners" style="width:65%; height:40px;"> &nbsp;
+													<input id="isbn" placeholder="Please input the ISBN" autocomplete="off" class=" r_corners" style="width:65%; height:34px;font-size:16px;"> &nbsp;
 													<button id="delete" onclick="deleteEbook()" style="height:30px;vertical-align:middle;padding-top:5px;margin-top:-5px" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 													<div id="colorpanel" style="position:absolute;display:none;width:253px;height:177px;"></div>
 													<div id="details" style="display:none;font-size:14px;width:400px;position:absolute;z-index:10000;background:#fff;border:1px solid #aaa" ></div>
